added profile setup in modal

--- a/ride-planner.html
+++ b/ride-planner.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
-    <h1>Ride Planner</h1>
+    <div id="scrim"></div>
+    <div id="profileSetup">
         <h2>My Info</h2>
         <div>
             <label for="name">Name</label>
@@ -79,6 +80,7 @@
         </div>
         <button id="rider">Submit</button>
     </div>
+    <div id="profile"></div>
 <div style="height: 1px; background-color: gray;"></div>
 <h2>My Ride</h2>
     <div>
