finished persistant rider profile

--- a/ride-planner.html
+++ b/ride-planner.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="scrim"></div>
-    <div id="profileSetup">
+    <div id="scrim" class="hidden"></div>
+    <div id="profileSetup" class="hidden">
         <h2>My Info</h2>
         <div>
             <label for="name">Name</label>
@@ -81,7 +81,7 @@
         <button id="rider">Submit</button>
     </div>
     <div id="profile"></div>
-<div style="height: 1px; background-color: gray;"></div>
+
 <h2>My Ride</h2>
     <div>
         <label for="start">Start</label>
