--- a/ride-planner.html
+++ b/ride-planner.html
@@ -119,7 +119,7 @@
     <div id="weather"></div>
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJj2BUTlXIggoAshj_gRVbNN8joLxmCUU&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=&v=weekly"
       defer
     ></script>
     <script src="ride-planner.js"></script>
