--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,7 +20,7 @@
     
 
     <!-- include spec files here... -->
-    <script src="ride-panner.spec.js"></script>
+    <script src="ride-planner.spec.js"></script>
 
   </head>
 
